I added an image folder and an image to the index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>My first web page</head>
+    <head>
+        <title>My first web page</title>
+    </head>
     <body>
-        
+        <img src="images/mosh.jpg">
+        <p>@moshhamedani</p>
+        <p>I love to teach you html</p>
     </body>
 </html>
