--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My first web page</title>
-    <style>
-      img {
-        width: 100px;
-        border-radius: 50px;
-        float: left;
-        margin-right: 10px;
-      }
-
-      .username {
-        font-weight: bold;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
-  <body>
-    <img src="images/mosh.jpg" alt="An image of Mosh" />
-    <p class="username">@moshhamedani</p>
-    <p>I love to teach you html</p>
-  </body>
+  <body></body>
 </html>
