--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="..." />
     <title>Document</title>
+    <style>
+      em {
+        color: red;
+        font-style: normal;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <p>I love learning <em>HTML</em>!</p>
+  </body>
 </html>
