--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </style>
   </head>
   <body>
-    <p>I love learning <em>HTML</em>!</p>
+    <a href="about.html">About Me</a>
   </body>
 </html>
