I added two headings with paragraphs and added a hyperlink to the CSS section using an id

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
   </head>
   <body>
     <a href="about.html">About Me</a>
+    <a href="images/mosh.jpg" download>My Photo</a>
+    <a href="#section-css">CSS</a>
+    <h2>HTML</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus modi quisquam magni, consectetur ipsa odio provident, aut in eius minus libero impedit alias fugiat esse dolores assumenda, officia veritatis! Et.</p>
+    <h2 id="section-css">CSS</h2>  
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus atque facilis commodi pariatur accusantium? Laudantium iste velit repellendus quaerat, ea omnis deserunt provident fugit, sint ullam rerum culpa nam.</p>
   </body>
 </html>
