I added a hyperlink at the bottom of the page to jump back to the top

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus modi quisquam magni, consectetur ipsa odio provident, aut in eius minus libero impedit alias fugiat esse dolores assumenda, officia veritatis! Et.</p>
     <h2 id="section-css">CSS</h2>  
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus atque facilis commodi pariatur accusantium? Laudantium iste velit repellendus quaerat, ea omnis deserunt provident fugit, sint ullam rerum culpa nam.</p>
+    <a href="#">Jump to Top</a>
   </body>
 </html>
