--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <a href="about.html">About Me</a>
     <a href="images/mosh.jpg" download>My Photo</a>
     <a href="#section-css">CSS</a>
-    <a href="https://google.com"></a>
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="mailto:uherkadon001@gmail.com">Email me</a>
     <h2>HTML</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus modi quisquam magni, consectetur ipsa odio provident, aut in eius minus libero impedit alias fugiat esse dolores assumenda, officia veritatis! Et.</p>
     <h2 id="section-css">CSS</h2>  
