I added a photo with some css to shrink the photo and make it clear while cropped

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         color: red;
         font-style: normal;
       }
+      img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+      }
     </style>
   </head>
   <body>
@@ -19,10 +24,23 @@
     <a href="#section-css">CSS</a>
     <a href="https://google.com" target="_blank">Google</a>
     <a href="mailto:uherkadon001@gmail.com">Email me</a>
+    <img
+      src="images/ahmed-saeed-3oY6iqvc2sg-unsplash (1).jpg"
+      alt="Sunset on the beach"
+    />
     <h2>HTML</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus modi quisquam magni, consectetur ipsa odio provident, aut in eius minus libero impedit alias fugiat esse dolores assumenda, officia veritatis! Et.</p>
-    <h2 id="section-css">CSS</h2>  
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus atque facilis commodi pariatur accusantium? Laudantium iste velit repellendus quaerat, ea omnis deserunt provident fugit, sint ullam rerum culpa nam.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus modi
+      quisquam magni, consectetur ipsa odio provident, aut in eius minus libero
+      impedit alias fugiat esse dolores assumenda, officia veritatis! Et.
+    </p>
+    <h2 id="section-css">CSS</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      accusamus atque facilis commodi pariatur accusantium? Laudantium iste
+      velit repellendus quaerat, ea omnis deserunt provident fugit, sint ullam
+      rerum culpa nam.
+    </p>
     <a href="#">Jump to Top</a>
   </body>
 </html>
