I added the autoplay and loop element to the video

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
   </head>
   <body>
-    <video controls src="/videos/ocean.mp4"></video>
+    <video controls autoplay loop src="/videos/ocean.mp4"></video>
   </body>
 </html>
