--- a/index.html
+++ b/index.html
@@ -6,30 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="..." />
     <title>Document</title>
-    <style></style>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      p {
+        color: black;
+      }
+      #first {
+        color: purple;
+      }
+    </style>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h2>Products</h2>
-        <article></article>
-      </section>
-      <section>
-        <h2>Testimonial</h2>
-        <article></article>
-        <article></article>
-      </section>
-    </main>
-    <aside></aside>
-    <footer></footer>
+    <p id="first">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. A, itaque.
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, minus!
+    </p>
   </body>
 </html>
