I added some basic CSS selectors on the style sheet

--- a/index.html
+++ b/index.html
@@ -8,21 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <style>
-      p {
-        color: black;
-      }
-      #first {
-        color: purple;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
-    <p id="first">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. A, itaque.
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, minus!
-    </p>
+    <section id="products"></section>
   </body>
 </html>
