--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <style></style>
   </head>
   <body>
-    <section id="products"></section>
+    <section id="products">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, inventore.
+      </p>
+    </section>
   </body>
 </html>
