--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <style></style>
   </head>
   <body>
-    <section id="products">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, inventore.
+    <article>
+      <p class="first">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+        quaerat.
       </p>
-    </section>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque,
+        quia.
+      </p>
+    </article>
   </body>
 </html>
