I used some examples of pseudo-element Selectors

--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
     <style></style>
   </head>
   <body>
-    <article>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-        quaerat.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque,
-        quia.
-      </p>
-    </article>
+    <h1>Heading</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ducimus ex
+      laborum accusantium numquam maxime.
+    </p>
   </body>
 </html>
