I have added gradients to my div

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <style></style>
   </head>
   <body>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-      <strong>iusto</strong> in ut iste magni atque voluptas, eveniet harum
-      velit!
-    </p>
+    <div class="box"></div>
   </body>
 </html>
