This is an example of hidding elements

--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
     <style></style>
   </head>
   <body>
-    <div class="box">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam,
-        incidunt! Voluptas, quasi quae qui illo nobis dolor enim ipsam eaque
-        error ullam blanditiis, perspiciatis numquam nesciunt? Minima alias
-        soluta voluptas, recusandae aliquid veniam magni molestiae expedita
-        dignissimos excepturi inventore, similique beatae placeat qui
-        doloremque. Eius quam totam ullam praesentium provident!
-      </p>
-    </div>
+    <p class="First">First</p>
+    <p>Second</p>
   </body>
 </html>
